adding suport to play against player over net
Added php file for server side process

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,5 +19,8 @@
             android:name="xo">
         </activity>
     </application>
+	<uses-permission 
+		android:name="android.permission.INTERNET">
+	</uses-permission>
 
 </manifest>
