--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.jaisel.tictactoe"
         minSdkVersion 14
         targetSdkVersion 21
-        versionCode 3
-        versionName "0.3.0"
+        versionCode 4
+        versionName "0.4.0-dev"
     }
     buildTypes {
         release {
