--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme2" >
         <activity
-            android:name=".MainActivity"
+            android:name="MainActivity"
             android:label="@string/app_name" >
 			<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
