--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,24 +1,37 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "21.1.0"
-
+    signingConfigs {
+        config {
+            keyAlias 'jaisel'
+            keyPassword 'lesiajp20_@#'
+            storeFile file('/home/jaisel/jaisel.jks')
+            storePassword 'lesiajp20_@#'
+        }
+    }
+    compileSdkVersion 25
+    buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "com.jaisel.tictactoe"
-        minSdkVersion 14
-        targetSdkVersion 21
+        minSdkVersion 15
+        targetSdkVersion 25
         versionCode 4
         versionName "0.4.0-dev"
+        signingConfig signingConfigs.config
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            debuggable false
+            signingConfig signingConfigs.config
         }
+    }
+    productFlavors {
     }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile files('libs/android-support-v4.jar')
 }
