--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.github.mukeshsolanki:android-otpview-pinview:1.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation "android.arch.persistence.room:runtime:1.1.1"
+    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
 }
 
 apply plugin: 'com.google.gms.google-services'
