--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,7 @@ android {
         targetSdkVersion 27
         versionCode 110
         versionName "1.1.0"
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -38,16 +39,17 @@ dependencies {
     implementation 'com.android.support:customtabs:27.1.1'
     implementation 'com.android.support:support-fragment:27.1.1'
     implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation 'com.android.volley:volley:1.1.0'
+    implementation "android.arch.persistence.room:runtime:1.1.1"
     implementation 'com.google.firebase:firebase-messaging:17.0.0'
     implementation 'com.google.android.gms:play-services-ads:15.0.1'
     implementation 'com.google.firebase:firebase-auth:16.0.2'
     implementation 'com.google.firebase:firebase-firestore:17.0.2'
-    implementation files('libs/volley.jar')
     implementation 'de.hdodenhof:circleimageview:2.2.0'
-    implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.github.mukeshsolanki:android-otpview-pinview:1.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    implementation "android.arch.persistence.room:runtime:1.1.1"
+
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
 }
 
