--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,7 @@
         <activity
             android:name=".LoginActivity"
             android:theme="@style/AppTheme" />
+        <activity android:name=".SelectOpponentActivity" />
 
         <service
             android:name=".fcm.MessagingService"
