--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,12 +9,12 @@ android {
             storePassword 'lesiajp20_@#'
         }
     }
-    compileSdkVersion 27
-    buildToolsVersion '28.0.0 rc2'
+    compileSdkVersion 28
+    buildToolsVersion '28.0.3'
     defaultConfig {
         applicationId "com.jaisel.tictactoe"
         minSdkVersion 14
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 110
         versionName "1.1.0"
         vectorDrawables.useSupportLibrary = true
@@ -35,22 +35,20 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support:customtabs:27.1.1'
-    implementation 'com.android.support:support-fragment:27.1.1'
-    implementation 'com.android.support:design:27.1.1'
-    implementation 'com.android.support:cardview-v7:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha01'
+    implementation 'androidx.fragment:fragment:1.1.0-alpha02'
+    implementation 'com.google.android.material:material:1.1.0-alpha01'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
     implementation 'com.android.volley:volley:1.1.0'
-    implementation "android.arch.persistence.room:runtime:1.1.1"
-    implementation 'com.google.firebase:firebase-messaging:17.0.0'
-    implementation 'com.google.android.gms:play-services-ads:15.0.1'
-    implementation 'com.google.firebase:firebase-auth:16.0.2'
-    implementation 'com.google.firebase:firebase-firestore:17.0.2'
+    implementation 'androidx.room:room-runtime:2.1.0-alpha03'
+    implementation 'com.google.firebase:firebase-messaging:17.3.4'
+    implementation 'com.google.android.gms:play-services-ads:17.1.2'
+    implementation 'com.google.firebase:firebase-auth:16.0.5'
+    implementation 'com.google.firebase:firebase-firestore:17.1.3'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.github.mukeshsolanki:android-otpview-pinview:1.1.0'
-
-    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
+    annotationProcessor "androidx.room:room-compiler:2.1.0-alpha03"
 }
 
 apply plugin: 'com.google.gms.google-services'
