--- a/firebase/functions/package.json
+++ b/firebase/functions/package.json
@@ -10,12 +10,13 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
-    "firebase-admin": "~5.10.0",
-    "firebase-functions": "^1.1.0"
+    "firebase-admin": "^8.0.0",
+    "firebase-functions": "^2.3.1"
   },
   "devDependencies": {
     "eslint": "^4.12.0",
-    "eslint-plugin-promise": "^3.6.0"
+    "eslint-plugin-promise": "^3.8.0"
   },
+  "engines": {"node": "8"},
   "private": true
 }
